--- a/dev/sass/typical.scss
+++ b/dev/sass/typical.scss
@@ -36,7 +36,7 @@ div.center-content {
     margin-bottom: 0;
     max-width: 645px;
     width: 645px;
-    background: url("../images/center-section-background.png") repeat-y #E0E0E0;
+    background: url("../images/center-section-background.png") repeat-y #E0E0E0 65% 20px;
 }
 
 p.bread-crumbs {
